// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tests change changes the value when typing on the input 1`] = `
<div>
  <input
    name="item"
    onChange={[Function]}
    value=""
  />
  Value: 
  
</div>
`;

exports[`tests change changes the value when typing on the input 2`] = `
<div>
  <input
    name="item"
    onChange={[Function]}
    value="some"
  />
  Value: 
  some
</div>
`;
